segundo trabajo Jem

--- a/Ejercicio1_Bienvenida/index.html
+++ b/Ejercicio1_Bienvenida/index.html
@@ -8,8 +8,8 @@
 
 <body>
     <header>
+        <!--Encabezado principal-->
         <h1> ¡Bienvenido a la gran Aventura Pokemon, Entrenador!</h1>
-
     </header>
 
     <p>
@@ -19,7 +19,8 @@
      Pokemon para ser el mejor!
     </p>
     <footer>
-    2025 Gran Aventura Pokemon/ Todos los derechos reservados
+    2025 Gran Aventura Pokemon | Todos los derechos reservados
     </footer>
+    
 </body>
 </html>
