--- a/Ejercicio2_FichaPokemon /index.html
+++ b/Ejercicio2_FichaPokemon /index.html
@@ -14,7 +14,22 @@
         <p> Tipo Eléctrico</p>
         <p> Altura:0.4 m</p>
         <p>Peso: 6.0 kg</p>
-        
+        <h2> Habilidad Principal</h2>
+        <p>habilidad: Impactrueno</p>
+        <h2>Descripcion </h2>
+        <p> Pikachu es el Pokemon más emblemático de la 
+            región de Kanto, conocido por su energia eléctrica
+            y su gran lealtad hacia su entrenador.Su agilidad y carisma
+            lo han convertido en un icono mundial.
+        </p>
+        <h2>Lista de evoluciones </h2>
+        <ul>
+            Pichu(pre-evolucion)
+            Pikachu(forma basica)
+            Raichu(evolucion)
+        </ul>
+        <img src="R.jpg"width ="100">
+
     </section>
 
     
