--- a/Ejercicio1_Bienvenida/Examen Programacion /index.html
+++ b/Ejercicio1_Bienvenida/Examen Programacion /index.html
@@ -26,7 +26,6 @@
                         Servicios Especializado
 
                     </p>
-                    <p>TEL: 59858645</p>
                     <section>
                         
                           <p>Somos una plomeria comprometida con nuestros trabajos, 
@@ -35,6 +34,12 @@
 
                         </p>
                     </section>
+                    <footer>
+                       <p>TEL: 59858645</p>
+                       <p>mariosplomeria56@gmail.com</p>
+                       <p>mazatenango,suchitepequez</p>
+
+                    </footer>
 
                 </li>
             </ul>
