--- a/Ejercicio1_Bienvenida/Examen Programacion /Portafolio 6to,. p.c./index.html
+++ b/Ejercicio1_Bienvenida/Examen Programacion /Portafolio 6to,. p.c./index.html
@@ -8,6 +8,14 @@
 <body>
     <header class="header">
         <section class="presentacion_contenido">
+               <h1 class="presentacion_contenido_titulo">Sueña en grande...que pronto 
+                llegara tu momento
+               </h1>
+
+                <p class="presentacion_contenido_texto">¡Hola soy Elvis, tengo pensado 
+                    seguir estudiando para ser Auditor en una de las universidades de Quetzaltenango
+                    por simple hecho que me gusta la carrera y se hace muy interesante
+                </p>
 
         </section>
 
