--- a/Ejercicio1_Bienvenida/Examen Programacion /Portafolio 6to,. p.c./index.html
+++ b/Ejercicio1_Bienvenida/Examen Programacion /Portafolio 6to,. p.c./index.html
@@ -16,6 +16,11 @@
                     seguir estudiando para ser Auditor en una de las universidades de Quetzaltenango
                     por simple hecho que me gusta la carrera y se hace muy interesante
                 </p>
+                <div class="presente_enlaces">
+                    <h2 class="presentacion_enlaces_subtitulo">Accede a mis redes sociales:</h2>
+                    <a href="#Git"
+                    class="presentacion_enlace_link"></a>
+                </div>
 
         </section>
 
