--- a/Ejercicio1_Bienvenida/Examen Programacion /Portafolio 6to,. p.c./index.html
+++ b/Ejercicio1_Bienvenida/Examen Programacion /Portafolio 6to,. p.c./index.html
@@ -7,30 +7,33 @@
 </head>
 <body>
     <header class="header">
-        <section class="presentacion_contenido">
-               <h1 class="presentacion_contenido_titulo">Sueña en grande...que pronto 
-                llegara tu momento
-               </h1>
-
-                <p class="presentacion_contenido_texto">¡Hola soy Elvis, tengo pensado 
-                    seguir estudiando para ser Auditor en una de las universidades de Quetzaltenango
-                    por simple hecho que me gusta la carrera y se hace muy interesante
-                </p>
-                <div class="presente_enlaces">
-                    <h2 class="presentacion_enlaces_subtitulo">Accede a mis redes sociales:</h2>
-                    <a href="#Git"
-                    class="presentacion_enlace_link"></a>
-                </div>
-
-        </section>
-
+        
     </header>
     <main class="main">
+        <section class="presentacion_contenido">
+            <h1 class="presentacion_contenido_titulo">Sueña en grande...que pronto 
+             llegara tu momento
+            </h1>
 
+             <p class="presentacion_contenido_texto">¡Hola soy Elvis, tengo pensado 
+                 seguir estudiando para ser Auditor en una de las universidades de Quetzaltenango
+                 por simple hecho que me gusta la carrera y se hace muy interesante
+             </p>
+             <div class="presente_enlaces">
+                 <h2 class="presentacion_enlaces_subtitulo">Accede a mis redes sociales:</h2>
+                 <a href="#Git"
+                 class="presentacion_enlace_link">GitHub</a>
+                 <a href="#Ig"
+                 class="presentacion_enlaces_link">Instagram</a>
+
+             </div>
+
+        </section>
+        <img src="Elvis Soto.jpeg" alt="Imagen de Elvis Soto">
     </main>
     <footer class="footer">
 
-
+        <p>Desarrollado por Elvis Soto</p>
     </footer>
     
 </body>
