--- a/Ejercicio1_Bienvenida/Examen Programacion /Portafolio 6to,. p.c./index.html
+++ b/Ejercicio1_Bienvenida/Examen Programacion /Portafolio 6to,. p.c./index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
@@ -29,7 +30,7 @@
              </div>
 
         </section>
-        <img src="Elvis Soto.jpeg" alt="Imagen de Elvis Soto">
+        <img src="Elvis Soto.jpeg" alt="Imagen de Elvis Soto" class="presentacion_imagen">
     </main>
     <footer class="footer">
 
